fix userservice: added token validator endpoint
